<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>kuka_sunrise_fri_driver</name>
	<version>0.0.0</version>
	<description>ROS2 KUKA sunrise interface</description>
	<maintainer email="resizoltan@gmail.com">Zoltan Resi</maintainer>
	<maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<depend>fri</depend>
	<depend>rclcpp</depend>
	<depend>rclcpp_lifecycle</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>sensor_msgs</depend>
	<depend>kuka_driver_interfaces</depend>
	<depend>kuka_drivers_core</depend>
	<depend>hardware_interface</depend>
	<depend>controller_manager_msgs</depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<test_depend>ament_cmake_copyright</test_depend>
	<test_depend>ament_cmake_cppcheck</test_depend>
	<test_depend>ament_cmake_pep257</test_depend>
	<test_depend>ament_cmake_flake8</test_depend>
	<test_depend>ament_cmake_cpplint</test_depend>
	<test_depend>ament_cmake_lint_cmake</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
