<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnimove_external_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="osboxes@todo.todo">osboxes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>

  <exec_depend>controller_manager</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
