<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_pose_broadcaster</name>
  <version>0.1.0</version>
  <description>Broadcasts the pose transformation of a pose state interface</description>

  <maintainer email="krmihaly42@gmail.com">Mihaly Kristofi</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>generate_parameter_library</depend>

  <depend>kuka_driver_interfaces</depend>
  <depend>kuka_drivers_core</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
