<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fri_configuration_controller</name>
  <version>1.0.0</version>
  <description>Controller for configuration of FRI</description>

  <maintainer email="svastits1@gmail.com">Aron Svastits</maintainer>
  <maintainer email="kovacsge.work@gmail.com">Gergely Kovacs</maintainer>
  <maintainer email="sanyi.komaromi@gmail.com">Sandor Komaromi</maintainer>
  <maintainer email="pasztor.kristof.kp@gmail.com">Kristof Matyas Pasztor</maintainer>
  <maintainer email="pepo.tamas@gmail.com">Tamas Pepo</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>kuka_driver_interfaces</depend>
  <depend>kuka_drivers_core</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
